--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -250,7 +250,7 @@ function todo_logout(data,status){
     <php>}</php>
     >
     <ul>
-      <li> <a href="#">报表项审核</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/收支项">报表项审核</a> </li>
       <li> <a href="#">报表审核管理</a> </li>
       <li> <a href="#">签证</a> </li>
       <li> <a href="#">单项服务</a> </li>
@@ -301,6 +301,7 @@ function todo_logout(data,status){
         <ul class="cssmenu">
           <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/国内/kind/国内">国内团队 </a> </li>
           <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/境外/kind/日本">境外团队（日本） </a> </li>
+          <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/境外/kind/台湾">境外团队（台湾） </a> </li>
         </ul>
       </li>
       <li> <a href="<{:SITE_INDEX}>Dijie/danxiangfuwu">单项服务</a> </li>
