--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -240,9 +240,7 @@ function todo_logout(data,status){
       <li> <a href="<{:SITE_INDEX}>Chanpin/shenhe">产品审核</a> </li>
       <li> <a href="<{:SITE_INDEX}>Chanpin/kongguan">产品控管</a> </li>
       <li> <a href="<{:SITE_INDEX}>Xiaoshou/dingdanlist">订单控管</a> </li>
-      <li> <a href="#">客户管理</a> </li>
-      <li> <a href="#">数据字典</a> </li>
-      <li> <a href="#">统计</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Chanpin/customer">游客管理</a> </li>
     </ul>
     </span> <span id="moduleLink_1" 
     <php>if($navposition == '财务管理'){</php>
@@ -252,8 +250,6 @@ function todo_logout(data,status){
     <ul>
       <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/收支项">报表项审核</a> </li>
       <li> <a href="#">报表审核管理</a> </li>
-      <li> <a href="#">签证</a> </li>
-      <li> <a href="#">单项服务</a> </li>
       <li> <a href="#">统计</a> </li>
     </ul>
     </span> <span id="moduleLink_2" 
