Signed-off-by: neconano <308715744@qq.com>

--- a/Myerp/Tpl/Chanpin/shenhe.html
+++ b/Myerp/Tpl/Chanpin/shenhe.html
@@ -32,10 +32,10 @@
                   <php>}</php>
                   href="<{:SITE_INDEX}>Chanpin/shenhe/type/报账单">报账单</a> </li>
                 <li> <a 
-                  <php>if($markpos == '订单审核'){</php>
+                  <php>if($markpos == '订单'){</php>
                   class="current"
                   <php>}</php>
-                  href="<{:SITE_INDEX}>Chanpin/shenhe/type/订单审核">订单审核</a> </li>
+                  href="<{:SITE_INDEX}>Chanpin/shenhe/type/订单">订单</a> </li>
               </ul>
             </div>
             
@@ -138,7 +138,7 @@
                 </tr>
                 <php> }}</php>
                 
-                <php>if($markpos == '订单审核'){</php>
+                <php>if($markpos == '订单'){</php>
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:200px;"><div> 团名/日期 </div></th>
