--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -249,7 +249,8 @@ function todo_logout(data,status){
     >
     <ul>
       <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/收支项">报表项审核</a> </li>
-      <li> <a href="#">报表审核管理</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/报账单">报表审核</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Caiwu/shenhe/type/订单">订单审核</a> </li>
       <li> <a href="#">统计</a> </li>
     </ul>
     </span> <span id="moduleLink_2" 
